Tidy up display to use preferred fonts and to avoid overlaps.
Also added DISPLAY_ALL debug flag to show full map.

--- a/css/_map.scss
+++ b/css/_map.scss
@@ -8,4 +8,6 @@
 
 #map {
   text-align: center;
+  float: left;
+  overflow: hidden;
 }
